force-app/main/default/objects/Lead/fields/cas_LeadStatus__c.field-meta.xml
<CustomField>
    <fullName>cas_LeadStatus__c</fullName>
    <description>Lead Status for Connect and Sell.  Need the same values as the Contact status and Lead status used for Lead stages - So we created a new field to match contact status and will be mapped in C &amp; S for status</description>
    <label>Lead Status (CAS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Contacted</fullName>
            </value>
            <value>
                <fullName>Contacted - Qualifying</fullName>
            </value>
            <value>
                <fullName>Contacted - Disqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>