force-app/main/default/objects/Lead/fields/Channel_Rep__c.field-meta.xml
<CustomField>
    <fullName>Channel_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>