force-app/main/default/objects/Lead/fields/CL_Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>CL_Call_Attempts__c</fullName>
    <label>CL Call Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>