force-app/main/default/objects/Lead/fields/CL_Dialing_Agent_Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>CL_Dialing_Agent_Call_Disposition__c</fullName>
    <label>CL Dialing Agent Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Attempted</fullName>
            </value>
            <value>
                <fullName>Direct Phone Number</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>IVR - Name not on the Directory</fullName>
            </value>
            <value>
                <fullName>Left VM (By DA)</fullName>
            </value>
            <value>
                <fullName>No Longer with the Company</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>OPR - Name not on the Directory</fullName>
            </value>
            <value>
                <fullName>Reached Gatekeeper - Call not transferred</fullName>
            </value>
            <value>
                <fullName>Went to Voice mail</fullName>
            </value>
            <value>
                <fullName>Wrong Phone Number</fullName>
            </value>
            <value>
                <fullName>Talker Busy Call Not Transferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>