force-app/main/default/objects/Lead/fields/CL_First_Dialed_Date__c.field-meta.xml
<CustomField>
    <fullName>CL_First_Dialed_Date__c</fullName>
    <label>CL First Dialed Date</label>
    <type>DateTime</type>
</CustomField>