force-app/main/default/objects/Lead/fields/CL_Last_Dialed_Date__c.field-meta.xml
<CustomField>
    <fullName>CL_Last_Dialed_Date__c</fullName>
    <label>CL Last Dialed Date</label>
    <type>DateTime</type>
</CustomField>