force-app/main/default/objects/Lead/fields/CL_Talker_Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>CL_Talker_Call_Disposition__c</fullName>
    <label>CL Talker Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Meeting Scheduled</fullName>
            </value>
            <value>
                <fullName>Got Referral</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Left VM</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Not a Decision Maker</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Call Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>