force-app/main/default/objects/Lead/fields/Create_1_Week_Follow_up_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_1_Week_Follow_up_Task__c</fullName>
    <description>Checks if Lead was created before 7 days and still has default Lead Score</description>
    <formula>AND(
(TODAY() &gt;= DATEVALUE(CreatedDate) + 7),
 FPSA_Lead_Score__c == VALUE($Label.Default_Lead_Score)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create 1 Week Follow-up Task</label>
    <type>Checkbox</type>
</CustomField>