force-app/main/default/objects/Lead/fields/Create_2_Weeks_Follow_up_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_2_Weeks_Follow_up_Task__c</fullName>
    <description>Checks if Lead was created before 14 days and still has default Lead Score</description>
    <formula>AND(
(TODAY() &gt;= DATEVALUE(CreatedDate) + 14),
FPSA_Lead_Score__c == VALUE($Label.Default_Lead_Score)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create 2 Weeks Follow-up Task</label>
    <type>Checkbox</type>
</CustomField>