force-app/main/default/objects/Lead/fields/FPSA_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>FPSA_Lead_Score__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>Lead Score based on different activities</inlineHelpText>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>