force-app/main/default/objects/Lead/fields/Is_Task_Scheduler_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Task_Scheduler_Eligible__c</fullName>
    <formula>AND(
OR(
AND(Create_1_Week_Follow_up_Task__c, NOT(X1_Week_Follow_up_Task_Created__c)),
AND(Create_2_Weeks_Follow_up_Task__c, NOT(X2_Weeks_Follow_up_Task_Created__c)),
No_One_Month_Activity__c
),
TEXT(Status) &lt;&gt; $Label.Lead_Status_Qualified,
TEXT(Status) &lt;&gt; $Label.Lead_Status_Unqualified
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Task Scheduler Eligible</label>
    <type>Checkbox</type>
</CustomField>