force-app/main/default/objects/Lead/fields/Mailchimp_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Mailchimp_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailchimp Task Created</label>
    <type>Checkbox</type>
</CustomField>