force-app/main/default/objects/Lead/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <inlineHelpText>Lead&apos;s Manager</inlineHelpText>
    <label>Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>