force-app/main/default/objects/Lead/fields/No_One_Month_Activity__c.field-meta.xml
<CustomField>
    <fullName>No_One_Month_Activity__c</fullName>
    <formula>AND(
(TODAY() &gt;= DATEVALUE(CreatedDate) + 30),
FPSA_Lead_Score__c &lt;= VALUE($Label.Unqualified_Lead_Score)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No One Month Activity</label>
    <type>Checkbox</type>
</CustomField>