force-app/main/default/objects/Lead/fields/Opportunities_closedwon__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_closedwon__c</fullName>
    <label>Opportunities closed/won</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>