force-app/main/default/objects/Lead/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01 - Identifying an Opportunity</fullName>
            </value>
            <value>
                <fullName>02 - Determining Problem, Impact, Ideal</fullName>
            </value>
            <value>
                <fullName>03 - Validating Benefits &amp; Value</fullName>
            </value>
            <value>
                <fullName>04 - Confirming Value With Power</fullName>
            </value>
            <value>
                <fullName>05 - Negotiating $$ &amp; Mutual Plan</fullName>
            </value>
            <value>
                <fullName>06 - Finalizing Closure</fullName>
            </value>
            <value>
                <fullName>07 - Pending</fullName>
            </value>
            <value>
                <fullName>08 - Closed</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>