force-app/main/default/objects/Lead/fields/X1_Week_Follow_up_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>X1_Week_Follow_up_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1 Week Follow-up Task Created</label>
    <type>Checkbox</type>
</CustomField>