force-app/main/default/objects/Lead/fields/X2_Weeks_Follow_up_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>X2_Weeks_Follow_up_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2 Weeks Follow-up Task Created</label>
    <type>Checkbox</type>
</CustomField>